# cloudflare-sg-lambda

./: .gitignore  README.md  conftest.py  lambda_function.py  lambda_function_urllib.py  package.sh  pyproject.toml  requirements.txt  setup.cfg
tests/: cloudflare_cidrs.json  old_cloudflare_cidrs.json  old_sg_ip_permissions.json  sg_ip_permissions.json  test_comparison.py
